[package]
name = "timerrs"
version = "0.1.1"
edition = "2024"
authors = ["Aethar <elliott.ashby8@gmail.com>"]
description= "A simple timer for the terminal"
license = "MIT"
repository = "https://github.com/Aethar/timerrs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
chrono = "0.4"
anyhow = "1.0"
humantime = "2.1"
log = "0.4.29"
env_logger = "0.11.8"

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
