[package]
name = "timerrs"
version = "0.1.3"
edition = "2024"
authors = ["Aethar <elliott.ashby8@gmail.com>"]
description= "A simple timer for the terminal"
license = "MIT"
repository = "https://github.com/Aethar/timerrs"

[dependencies]
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
humantime = "2.1"

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
